Use absolute links for subdomains

--- a/commercial-search/templates/subdomain_list.html
+++ b/commercial-search/templates/subdomain_list.html
@@ -4,7 +4,7 @@
 <h1>Subdomains:</h1>
 <ul>
     {% for subdomain in subdomains %}
-        <li><a href="{{subdomain}}.{{host}}" target="_self">{{subdomain}}</href></li>
+        <li><a href="//{{subdomain}}.{{host}}" target="_self">{{subdomain}}</href></li>
     {% endfor %}
 </ul>
 {% endblock %}
