--- a/commercial-search/templates/article_list.html
+++ b/commercial-search/templates/article_list.html
@@ -3,9 +3,15 @@
 {% block content %}
 <h1>Articles</h1>
 <ul>
-    {% for article in articles %}
-        <li><a href="/article/{{ quote(article.title)}}" target="_self">{{article.title}}</href></li>
+    {% for article in articles.items %}
+        <li><a href="/article/{{ article.title|urlencode }}" target="_self">{{article.title}}</href></li>
     {% endfor %}
 </ul>
-<b><a href="/{{page+1}}" target="_self">Next Page &gt;</a></b>
+<b>
+    {% if page.has_prev() %}
+        <a href="/{{articles.page-1}}" target="_self">&lt;Previous Page</a>
+    {% endif %}
+    {% if page.has_next() %}
+        <a href="/{{articles.page+1}}" target="_self">Next Page &gt;</a></b>
+    {% endif %}
 {% endblock %}
