--- a/commercial-search/templates/article_list.html
+++ b/commercial-search/templates/article_list.html
@@ -8,10 +8,10 @@
     {% endfor %}
 </ul>
 <b>
-    {% if articles.has_prev() %}
+    {% if articles.has_prev %}
         <a href="/{{articles.page-1}}" target="_self">&lt;Previous Page</a>
     {% endif %}
-    {% if articles.has_next() %}
+    {% if articles.has_next %}
         <a href="/{{articles.page+1}}" target="_self">Next Page &gt;</a></b>
     {% endif %}
 {% endblock %}
