--- a/commercial-search/templates/article_list.html
+++ b/commercial-search/templates/article_list.html
@@ -9,7 +9,7 @@
 </ul>
 <b>
     {% if articles.has_prev %}
-        <a href="/{{articles.page-1}}" target="_self">&lt;Previous Page</a>
+        <a href="/{{articles.page-1}}" target="_self">&lt; Prev. Page</a>
     {% endif %}
     {% if articles.has_next %}
         <a href="/{{articles.page+1}}" target="_self">Next Page &gt;</a></b>
