--- a/commercial-search/templates/layout.html
+++ b/commercial-search/templates/layout.html
@@ -2,7 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>SimpleWiki</title>
+        <meta name="description" content="Experimental SimpleWiki with various text perturbations applied.">
+        <title>Bad Search Wiki</title>
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
     </head>
     <body>
         {% block content %}{% endblock %}
