--- a/commercial-search/static/style.css
+++ b/commercial-search/static/style.css
@@ -1,3 +1,13 @@
 body {
     background-color: #f6f6f6;
 }
+
+.sidebar {
+    min-width: 10%;
+}
+
+.content {
+    display: inline-block;
+    min-width: 90%;
+    border: 1px solid #a7d7f9;
+}
