Improve Headings and Landing Page

--- a/commercial-search/templates/subdomain_list.html
+++ b/commercial-search/templates/subdomain_list.html
@@ -1,7 +1,8 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<h1>Subdomains:</h1>
+<h1>Perturbation Subdomains</h1>
+<p>The following subdomains represent experiments applying different perturbations.</p>
 <ul>
     {% for subdomain in subdomains %}
         <li><a href="//{{subdomain}}.{{host}}" target="_self">{{subdomain}}</href></li>
