--- a/commercial-search/static/style.css
+++ b/commercial-search/static/style.css
@@ -2,6 +2,11 @@ body {
     background-color: #f6f6f6;
 }
 
+h1 {
+    border-bottom: 1px solid #a2a9b1;
+    line-height: 2;
+}
+
 .sidebar {
     display: inline-block;
     width: 10%;
