--- a/commercial-search/templates/layout.html
+++ b/commercial-search/templates/layout.html
@@ -2,9 +2,20 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="Experimental SimpleWiki with various text perturbations applied.">
-        <title>Bad Search Wiki</title>
+        <meta name="msapplication-TileColor" content="#00a300">
+        <meta name="msapplication-config" content="/static/browserconfig.xml">
+        <meta name="theme-color" content="#ffffff">
+        <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
+        <link rel="manifest" href="/static/site.webmanifest">
+        <link rel="mask-icon" href="/static/safari-pinned-tab.svg" color="#00a300">
+        <link rel="shortcut icon" href="/static/favicon.ico">
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+
+        <title>Bad Search Wiki</title>
+        <meta name="description" content="Experimental SimpleWiki with various text perturbations applied.">
+        
     </head>
     <body>
         <div class="sidebar"><a href="/"><img src="{{ url_for('static', filename='logo.png') }}" class="logo"></a></div>
