--- a/commercial-search/static/style.css
+++ b/commercial-search/static/style.css
@@ -4,8 +4,8 @@
     font-style: normal;
     font-weight: 400;
     src: local(''),
-         url('/static/fonts/noto.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('/static/fonts/noto.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+         url('/static/noto.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('/static/noto.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
 
 body {
